AskHere.Backend/Kubernetes/mysql-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mysql-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: mysql
    template:
        metadata:
            labels:
                app: mysql
        spec:
            containers:
                - name: mysql
                  image: mysql:latest
                  ports:
                      - name: mysql-port
                        containerPort: 3306
                  resources:
                      requests:
                          memory: "2Gi"
                          cpu: "1"
                      limits:
                          memory: "4Gi"
                          cpu: "2"
                  volumeMounts:
                      - name: mysql
                        mountPath: /var/opt/mssql/data
            volumes:
                - name: mysql
                  persistentVolumeClaim:
                      claimName: mysql-claim
---
apiVersion: v1
kind: Service
metadata:
    name: mysql-clusterip-srv
spec:
    type: ClusterIP
    selector:
        app: mysql
    ports:
        - name: mysql-port
          protocol: TCP
          port: 3306
          targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
    name: mysql-loadbalancer
spec:
    type: LoadBalancer
    selector:
        app: mysql
    ports:
        - name: mysql-port
          protocol: TCP
          port: 3306
          targetPort: 3306
