AskHere.Backend/Kubernetes/redis-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: redis-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: redis
    template:
        metadata:
            labels:
                app: redis
        spec:
            containers:
                - name: redis
                  image: redis:latest
                  ports:
                      - name: redis-port
                        containerPort: 6379
                  resources:
                      requests:
                          cpu: "100m"
                          memory: "256Mi"
                      limits:
                          cpu: "500m"
                          memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
    name: redis-clusterip-srv
spec:
    type: ClusterIP
    selector:
        app: redis
    ports:
        - name: redis-port
          protocol: TCP
          port: 6379
          targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
    name: redis-loadbalancer
spec:
    type: LoadBalancer
    selector:
        app: redis
    ports:
        - name: redis-port
          protocol: TCP
          port: 6379
          targetPort: 6379
