AskHere.Backend/Kubernetes/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-srv
    annotations:
        nginx.ingress.kubernetes.io/enable-cors: "true"
        nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost:5173"
spec:
    ingressClassName: nginx
    tls:
        - hosts:
              - askhere.prod.dev
          secretName: tls-secret
    rules:
        - host: askhere.prod.dev
          http:
              paths:
                  - path: /api/auth
                    pathType: Prefix
                    backend:
                        service:
                            name: askhere-users-clusterip-srv
                            port:
                                number: 80
                  - path: /api/account
                    pathType: Prefix
                    backend:
                        service:
                            name: askhere-users-clusterip-srv
                            port:
                                number: 80
                  - path: /api/questions
                    pathType: Prefix
                    backend:
                        service:
                            name: askhere-questions-clusterip-srv
                            port:
                                number: 81
